Bug 1371694 - Strip `invariant` on Mac. r=lsalzman

MozReview-Commit-ID: 5thQThRUBOY

Differential Revision: https://phabricator.services.mozilla.com/D18902

--HG--
extra : moz-landing-system : lando